# ChoiceForge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChoiceForge.html  LICENSE  README.md  README.pt-BR.md  SECURITY.md  agents.md  app.jsx  chrome.jsx  dashboard.jsx  data.jsx  directions.css  graph-canvas.jsx  index.html  left-panel.jsx  node-card.jsx  package-lock.json  package.json  prompt_editor_visual_choicescript (1).md  right-panel.jsx  styles.css  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-release.yml
docs/: cloudflare-pages.md  deploying.md  dev-workflow.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BottomBar.tsx  CodeEditor.tsx  CommandPalette.tsx  Dashboard.tsx  GeneratedDocumentView.tsx  GraphCanvas.tsx  HelpGuide.tsx  KeyboardShortcutOverlay.tsx  LeftPanel.tsx  ManuscriptView.tsx  NewProjectModal.tsx  NodeBodyEditor.tsx  NodeCard.tsx  OfficialPlayView.tsx  PanelErrorBoundary.tsx  PlaytestView.tsx  RightPanel.tsx  SceneMapView.tsx  SnapshotPanel.tsx  TemplatesPalette.tsx  TopBar.tsx  ValidationView.tsx
src/data/: lintMessages.ts  sampleProject.ts  templates.ts
src/domain/: choicescript.ts  choicescriptImport.ts  graphLayout.ts  graphvizExport.ts  parsing.ts  types.ts
tests/: domain.test.ts
(+19 files in other folders)
