[package]
name = "choiceforge"
version = "0.1.0"
description = "ChoiceForge — Visual ChoiceScript Editor"
authors = []
edition = "2021"

[lib]
name = "choiceforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
