[package]
name = "choiceforge"
version = "0.10.0"
description = "ChoiceForge — Visual ChoiceScript Editor"
authors = []
edition = "2021"

[lib]
name = "choiceforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
